# warciv

./: CMakeLists.txt  ChangeLog  DEVELOPERS  Makefile.am  README  acconfig.old  acinclude.m4  aclocal.m4  autogen.sh  civ  civ-gdbs  civ-kdbg  civ-val  civ2  civD  civG  civV  config.h  config.h.in  config.status  configure  configure.ac  diff_ignore  example-actions.list  foo  for_commis.sh  freeciv.spec  index.html  params.json  run.sh  ser  update_freeciv-2.0.sh  version.in  warciv.spec
ai/: Makefile.am  advdiplomacy.c  advdiplomacy.cc  advdiplomacy.h  advdiplomacy.hh  advdomestic.c  advdomestic.cc  advdomestic.h  advdomestic.hh  advmilitary.c  advmilitary.cc  advmilitary.h  advmilitary.hh  advspace.c  advspace.cc  advspace.h  advspace.hh  aiair.c  aiair.cc  aiair.h  aiair.hh  aicity.c  aicity.cc  aicity.h  aicity.hh  aidata.c  aidata.cc  aidata.h  aidata.hh  aidiplomat.c  aidiplomat.cc  aidiplomat.h  aidiplomat.hh  aiexplorer.c  aiexplorer.cc  aiexplorer.h  aiexplorer.hh  aiferry.c  aiferry.cc  aiferry.h  (+29 more)
client/: Makefile  Makefile.am  Makefile.in  attribute.c  attribute.cc  attribute.h  audio.c  audio.cc  audio.h  audio.hh  audio_alsa.c  audio_alsa.cc  audio_alsa.h  audio_alsa.hh  audio_amiga.c  audio_amiga.cc  audio_amiga.h  audio_esd.c  audio_esd.cc  audio_esd.h  audio_none.c  audio_none.cc  audio_none.h  audio_none.hh  audio_sdl.c  audio_sdl.cc  audio_sdl.h  audio_winmm.c  audio_winmm.cc  audio_winmm.h  chatline_common.c  chatline_common.cc  chatline_common.h  chatline_common.hh  citydlg_common.c  citydlg_common.cc  citydlg_common.h  citydlg_common.hh  cityrepdata.c  cityrepdata.cc  (+89 more)
client/agents/: Makefile  Makefile.am  Makefile.in  agents.c  agents.cc  agents.h  agents.hh  cma_core.c  cma_core.cc  cma_core.h  cma_core.hh  cma_fec.c  cma_fec.cc  cma_fec.h  cma_fec.hh  sha.c  sha.cc  sha.h
client/gui-ftwl/: Makefile
client/gui-gtk/: Makefile.in
client/gui-gtk-2.0/: Freeciv.h  Makefile.am  chatline.c  chatline.cc  chatline.h  chatline.hh  citydlg.c  citydlg.cc  citydlg.h  citydlg.hh  cityrep.c  cityrep.cc  cityrep.h  cityrep.hh  cma_fe.c  cma_fe.cc  cma_fe.h  cma_fe.hh  colors.c  colors.cc  colors.h  colors.hh  connectdlg.c  connectdlg.cc  connectdlg.h  connectdlg.hh  dialogs.c  dialogs.cc  dialogs.h  dialogs.hh  diplodlg.c  diplodlg.cc  diplodlg.h  diplodlg.hh  finddlg.c  finddlg.cc  finddlg.h  finddlg.hh  gamedlgs.c  gamedlgs.cc  (+88 more)
client/gui-gtk-3.0/: citydlg.c  cma_fe.c  cma_fe.h  connectdlg.c  connectdlg.h  dialogs.h  diplodlg.c  diplodlg.h  graphics.c  gui_main.c  happiness.c  helpdlg.c  helpdlg.h  mapctrl.h  mapview.h  menu.c  menu.h  messagedlg.c  messagedlg.h  messagewin.h  plrdlg.h  ratesdlg.h  resources.h  style.h  wldlg.c
client/gui-sdl/: Makefile  Makefile.in  SDL_ttf.c  SDL_ttf.h
client/gui-stub/: Makefile  Makefile.in
client/gui-win32/: Makefile  Makefile.in
client/gui-xaw/: Makefile.in
client/include/: Makefile.am  chatline_g.h  chatline_g.hh  citydlg_g.h  citydlg_g.hh  cityrep_g.h  cityrep_g.hh  colors_g.h  colors_g.hh  connectdlg_g.h  connectdlg_g.hh  dest_cursor.xbm  dest_cursor_mask.xbm  dialogs_g.h  dialogs_g.hh  diplodlg_g.h  diplodlg_g.hh  finddlg_g.h  gotodlg_g.h  graphics_g.h  graphics_g.hh  gui_main_g.h  gui_main_g.hh  helpdlg_g.h  helpdlg_g.hh  inteldlg_g.h  inteldlg_g.hh  mapctrl_g.h  mapctrl_g.hh  mapview_g.h  mapview_g.hh  menu_g.h  messagewin_g.h  messagewin_g.hh  pages_g.h  patrol_cursor.xbm  patrol_cursor_mask.xbm  plrdlg_g.h  plrdlg_g.hh  ratesdlg_g.h  (+8 more)
common/: Makefile  Makefile.am  Makefile.in  capstr.c  capstr.cc  capstr.h  capstr.hh  city.c  city.cc  city.h  city.hh  combat.c  combat.cc  combat.h  combat.hh  connection.c  connection.cc  connection.h  connection.hh  dataio.c  dataio.cc  dataio.h  dataio.hh  diptreaty.c  diptreaty.cc  diptreaty.h  diptreaty.hh  effects.c  effects.cc  effects.h  effects.hh  events.h  events.hh  fc_types.h  game.c  game.cc  game.h  game.hh  generate_packets.py  generate_packets.py-help  (+68 more)
common/aicore/: Makefile.am  Makefile.in  aisupport.c  aisupport.cc  aisupport.h  aisupport.hh  citymap.c  citymap.cc  citymap.h  citymap.hh  cm.c  cm.cc  cm.h  cm.hh  path_finding.c  path_finding.cc  path_finding.h  path_finding.hh  pf_tools.c  pf_tools.cc  pf_tools.h  pf_tools.hh
contrib/: Makefile.am  authsalt  block_tor_exit_nodes.sh
contrib/daemon/: Makefile.am  README.daemon  action.list  auth.serv  warserver.default  warserver.serv  warserver.sysv.sh  warserverd  welcome
contrib/fcdbmaint/: README  fcdb.cfg  fcdbdelete  fcdbmaint
contrib/wcdbmaint/: README  wcdb.cfg  wcdbdelete  wcdbmaint
data/: Freeciv  Makefile.am  Makefile.in  Warciv.in  auth.sql  database.lua  example-actions.txt  example-welcome.txt  exemple-actions.txt  freeciv.rc-2.0  gil-26.tilespec  helpdata.txt  isophex.tilespec  isotrident.tilespec  nowonder+-1.3.serv  nowonder+-1.4.serv  seggil.tilespec  team_names.txt  trident-26.tilespec  trident-28.tilespec  trident.tilespec  trident_shields.tilespec  warciv.rc-2.0  warserver.serv  wcdb.sql
data/1.14style/: Makefile  cities.ruleset  nations.ruleset  terrain.ruleset  units.ruleset
m4/: auth.m4  (+22 more)
server/: Makefile  Makefile.am  airgoto.c  airgoto.cc  airgoto.h  airgoto.hh  auth.c  auth.h  autoattack.c  autoattack.cc  autoattack.h  barbarian.c  barbarian.cc  barbarian.h  barbarian.hh  cityhand.c  cityhand.cc  cityhand.h  cityhand.hh  citytools.c  citytools.cc  citytools.h  citytools.hh  cityturn.c  cityturn.cc  cityturn.h  cityturn.hh  civserver.c  civserver.cc  civserver.h  civserver.hh  commands.c  commands.cc  commands.h  connecthand.c  connecthand.cc  connecthand.h  connecthand.hh  console.c  console.cc  (+118 more)
utility/: Makefile  Makefile.am  Makefile.in  astring.c  astring.cc  astring.h  astring.hh  capability.c  capability.cc  capability.h  capability.hh  distribute.c  distribute.cc  distribute.h  distribute.hh  fciconv.c  fciconv.h  fcintl.c  fcintl.h  genlist.c  genlist.cc  genlist.h  hash.c  hash.cc  hash.h  hash.hh  inputfile.c  inputfile.cc  inputfile.h  inputfile.hh  ioz.c  ioz.cc  ioz.h  ioz.hh  iterator.h  iterator.hh  log.c  log.cc  log.h  log.hh  (+60 more)
win32/: Makefile.am
(+959 files in other folders)
