cmake_minimum_required(VERSION 3.3)
project(wciv)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ai/advdiplomacy.cc
    ai/advdiplomacy.hh
    ai/advdomestic.cc
    ai/advdomestic.hh
    ai/advmilitary.cc
    ai/advmilitary.hh
    ai/advspace.cc
    ai/advspace.hh
    ai/aiair.cc
    ai/aiair.hh
    ai/aicity.cc
    ai/aicity.hh
    ai/aidata.cc
    ai/aidata.hh
    ai/aidiplomat.cc
    ai/aidiplomat.hh
    ai/aiexplorer.cc
    ai/aiexplorer.hh
    ai/aiferry.cc
    ai/aiferry.hh
    ai/aihand.cc
    ai/aihand.hh
    ai/aihunt.cc
    ai/aihunt.hh
    ai/ailog.cc
    ai/ailog.hh
    ai/aisettler.cc
    ai/aisettler.hh
    ai/aitech.cc
    ai/aitech.hh
    ai/aitools.cc
    ai/aitools.hh
    ai/aiunit.cc
    ai/aiunit.hh
    client/agents/agents.cc
    client/agents/agents.hh
    client/agents/cma_core.cc
    client/agents/cma_core.hh
    client/agents/cma_fec.cc
    client/agents/cma_fec.hh
    client/agents/sha.cc
    client/agents/sha.hh
    client/gui-gtk-2.0/chatline.cc
    client/gui-gtk-2.0/chatline.hh
    client/gui-gtk-2.0/citydlg.cc
    client/gui-gtk-2.0/citydlg.hh
    client/gui-gtk-2.0/cityrep.cc
    client/gui-gtk-2.0/cityrep.hh
    client/gui-gtk-2.0/cma_fe.cc
    client/gui-gtk-2.0/cma_fe.hh
    client/gui-gtk-2.0/colors.cc
    client/gui-gtk-2.0/colors.hh
    client/gui-gtk-2.0/connectdlg.cc
    client/gui-gtk-2.0/connectdlg.hh
    client/gui-gtk-2.0/dialogs.cc
    client/gui-gtk-2.0/dialogs.hh
    client/gui-gtk-2.0/diplodlg.cc
    client/gui-gtk-2.0/diplodlg.hh
    client/gui-gtk-2.0/finddlg.cc
    client/gui-gtk-2.0/finddlg.hh
    client/gui-gtk-2.0/gamedlgs.cc
    client/gui-gtk-2.0/gotodlg.cc
    client/gui-gtk-2.0/gotodlg.hh
    client/gui-gtk-2.0/graphics.cc
    client/gui-gtk-2.0/graphics.hh
    client/gui-gtk-2.0/gtkpixcomm.cc
    client/gui-gtk-2.0/gtkpixcomm.hh
    client/gui-gtk-2.0/gui_main.cc
    client/gui-gtk-2.0/gui_main.hh
    client/gui-gtk-2.0/gui_stuff.cc
    client/gui-gtk-2.0/gui_stuff.hh
    client/gui-gtk-2.0/happiness.cc
    client/gui-gtk-2.0/happiness.hh
    client/gui-gtk-2.0/helpdlg.cc
    client/gui-gtk-2.0/helpdlg.hh
    client/gui-gtk-2.0/inputdlg.cc
    client/gui-gtk-2.0/inputdlg.hh
    client/gui-gtk-2.0/inteldlg.cc
    client/gui-gtk-2.0/inteldlg.hh
    client/gui-gtk-2.0/mapctrl.cc
    client/gui-gtk-2.0/mapctrl.hh
    client/gui-gtk-2.0/mapview.cc
    client/gui-gtk-2.0/mapview.hh
    client/gui-gtk-2.0/menu.cc
    client/gui-gtk-2.0/menu.hh
    client/gui-gtk-2.0/messagedlg.cc
    client/gui-gtk-2.0/messagedlg.hh
    client/gui-gtk-2.0/messagewin.cc
    client/gui-gtk-2.0/messagewin.hh
    client/gui-gtk-2.0/my_cell_renderer_color.cc
    client/gui-gtk-2.0/my_cell_renderer_color.hh
    client/gui-gtk-2.0/optiondlg.hh
    client/gui-gtk-2.0/pages.cc
    client/gui-gtk-2.0/pages.hh
    client/gui-gtk-2.0/plrdlg.cc
    client/gui-gtk-2.0/plrdlg.hh
    client/gui-gtk-2.0/ratesdlg.hh
    client/gui-gtk-2.0/repodlgs.cc
    client/gui-gtk-2.0/repodlgs.hh
    client/gui-gtk-2.0/resources.cc
    client/gui-gtk-2.0/resources.hh
    client/gui-gtk-2.0/spaceshipdlg.cc
    client/gui-gtk-2.0/spaceshipdlg.hh
    client/gui-gtk-2.0/style.cc
    client/gui-gtk-2.0/style.hh
    client/gui-gtk-2.0/wldlg.cc
    client/gui-gtk-2.0/wldlg.hh
    client/include/chatline_g.hh
    client/include/citydlg_g.hh
    client/include/cityrep_g.hh
    client/include/colors_g.hh
    client/include/connectdlg_g.hh
    client/include/dialogs_g.hh
    client/include/diplodlg_g.hh
    client/include/finddlg_g.hh
    client/include/gotodlg_g.hh
    client/include/graphics_g.hh
    client/include/gui_main_g.hh
    client/include/helpdlg_g.hh
    client/include/inteldlg_g.hh
    client/include/mapctrl_g.hh
    client/include/mapview_g.hh
    client/include/menu_g.hh
    client/include/messagedlg_g.hh
    client/include/messagewin_g.hh
    client/include/pages_g.hh
    client/include/plrdlg_g.hh
    client/include/ratesdlg_g.hh
    client/include/repodlgs_g.hh
    client/include/spaceshipdlg_g.hh
    client/include/wldlg_g.hh
    client/attribute.cc
    client/attribute.hh
    client/audio.cc
    client/audio.hh
    client/audio_alsa.cc
    client/audio_alsa.hh
    client/audio_amiga.cc
    client/audio_amiga.hh
    client/audio_esd.cc
    client/audio_esd.hh
    client/audio_none.cc
    client/audio_none.hh
    client/audio_sdl.cc
    client/audio_sdl.hh
    client/audio_winmm.cc
    client/audio_winmm.hh
    client/chatline_common.cc
    client/chatline_common.hh
    client/citydlg_common.cc
    client/citydlg_common.hh
    client/cityrepdata.cc
    client/cityrepdata.hh
    client/civclient.cc
    client/civclient.hh
    client/climap.cc
    client/climap.hh
    client/climisc.cc
    client/climisc.hh
    client/clinet.cc
    client/clinet.hh
    client/connectdlg_common.cc
    client/connectdlg_common.hh
    client/control.cc
    client/control.hh
    client/goto.cc
    client/goto.hh
    client/helpdata.cc
    client/helpdata.hh
    client/mapctrl_common.cc
    client/mapctrl_common.hh
    client/mapview_common.cc
    client/mapview_common.hh
    client/messagewin_common.cc
    client/messagewin_common.hh
    client/multiselect.cc
    client/multiselect.hh
    client/options.cc
    client/options.hh
    client/packhand.cc
    client/packhand.hh
    client/packhand_gen.cc
    client/packhand_gen.hh
    client/plrdlg_common.cc
    client/plrdlg_common.hh
    client/repodlgs_common.cc
    client/repodlgs_common.hh
    client/text.cc
    client/text.hh
    client/tilespec.cc
    client/tilespec.hh
    client/trade.cc
    client/trade.hh
    common/aicore/aisupport.cc
    common/aicore/aisupport.hh
    common/aicore/citymap.cc
    common/aicore/citymap.hh
    common/aicore/cm.cc
    common/aicore/cm.hh
    common/aicore/path_finding.cc
    common/aicore/path_finding.hh
    common/aicore/pf_tools.cc
    common/aicore/pf_tools.hh
    common/capstr.cc
    common/capstr.hh
    common/city.cc
    common/city.hh
    common/combat.cc
    common/combat.hh
    common/connection.cc
    common/connection.hh
    common/dataio.cc
    common/dataio.hh
    common/diptreaty.cc
    common/diptreaty.hh
    common/effects.cc
    common/effects.hh
    common/events.hh
    common/game.cc
    common/game.hh
    common/generate_packets.cc
    common/government.cc
    common/government.hh
    common/idex.cc
    common/idex.hh
    common/improvement.cc
    common/improvement.hh
    common/map.cc
    common/map.hh
    common/nation.cc
    common/nation.hh
    common/packets.cc
    common/packets.hh
    common/packets_client.cc
    common/packets_gen.cc
    common/packets_gen.hh
    common/player.cc
    common/player.hh
    common/spaceship.cc
    common/spaceship.hh
    common/tech.cc
    common/tech.hh
    common/terrain.cc
    common/terrain.hh
    common/traderoute.cc
    common/traderoute.hh
    common/unit.cc
    common/unit.hh
    common/unittype.cc
    common/unittype.hh
    common/version.cc
    common/version.hh
    common/wc_types.hh
    common/worklist.cc
    common/worklist.hh
    manual/civmanual.cc
    utility/astring.cc
    utility/astring.hh
    utility/capability.cc
    utility/capability.hh
    utility/distribute.cc
    utility/distribute.hh
    utility/genlist.cc
    utility/genlist.hh
    utility/hash.cc
    utility/hash.hh
    utility/inputfile.cc
    utility/inputfile.hh
    utility/ioz.cc
    utility/ioz.hh
    utility/iterator.hh
    utility/log.cc
    utility/log.hh
    utility/md5.cc
    utility/md5.hh
    utility/mem.cc
    utility/mem.hh
    utility/netintf.cc
    utility/netintf.hh
    utility/pqueue.cc
    utility/pqueue.hh
    utility/rand.cc
    utility/rand.hh
    utility/registry.cc
    utility/registry.hh
    utility/sbuffer.cc
    utility/sbuffer.hh
    utility/shared.cc
    utility/shared.hh
    utility/speclist.hh
    utility/specvec.hh
    utility/support.cc
    utility/support.hh
    utility/tadns.cc
    utility/tadns.hh
    utility/timing.cc
    utility/timing.hh
    utility/wc_iconv.cc
    utility/wc_iconv.hh
    utility/wc_intl.cc
    utility/wc_intl.hh
    utility/wildcards.cc
    utility/wildcards.hh
    utility/win32-ucontext.cc
    utility/win32-ucontext.hh
    config.mac.h
)

add_executable(wciv ${SOURCE_FILES})