## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcivai.a

AM_CPPFLAGS = \
  -I$(top_srcdir)/utility \
  -I$(top_srcdir)/common \
  -I$(top_srcdir)/server \
  -I$(top_srcdir)/intl \
  -I$(top_srcdir)/common/aicore

## Above, note -I../intl instead of -I$(top_srdir/intl) is deliberate.

libcivai_a_SOURCES = \
		advdomestic.c	\
		advdomestic.h	\
		advmilitary.c	\
		advmilitary.h	\
		advdiplomacy.c	\
		advdiplomacy.h	\
		advspace.c	\
		advspace.h	\
		aiair.c		\
		aiair.h		\
		aicity.c	\
		aicity.h	\
		aidata.c	\
		aidata.h	\
		aiexplorer.c	\
		aiexplorer.h	\
		aiferry.c	\
		aiferry.h	\
		aihand.c	\
		aihand.h	\
		aihunt.c	\
		aihunt.h	\
		ailog.c		\
		ailog.h		\
		aisettler.c	\
		aisettler.h	\
		aitech.c	\
		aitech.h	\
		aitools.c	\
		aitools.h	\
		aiunit.c	\
		aiunit.h	\
		aidiplomat.c	\
		aidiplomat.h
