## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcivai.a

AM_CPPFLAGS = \
  -I$(top_srcdir)/utility \
  -I$(top_srcdir)/common \
  -I$(top_srcdir)/server \
  -I$(top_srcdir)/intl \
  -I$(top_srcdir)/common/aicore

## Above, note -I../intl instead of -I$(top_srdir/intl) is deliberate.

libcivai_a_SOURCES = \
  advdomestic.cc \
  advdomestic.hh \
  advmilitary.cc \
  advmilitary.hh \
  advdiplomacy.cc \
  advdiplomacy.hh \
  advspace.cc \
  advspace.hh \
  aiair.cc  \
  aiair.hh  \
  aicity.cc \
  aicity.hh \
  aidata.cc \
  aidata.hh \
  aiexplorer.cc \
  aiexplorer.hh \
  aiferry.cc \
  aiferry.hh \
  aihand.cc \
  aihand.hh \
  aihunt.cc \
  aihunt.hh \
  ailog.cc  \
  ailog.hh  \
  aisettler.cc \
  aisettler.hh \
  aitech.cc \
  aitech.hh \
  aitools.cc \
  aitools.hh \
  aiunit.cc \
  aiunit.hh \
  aidiplomat.cc \
  aidiplomat.hh
