## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcivutility.a

AM_CPPFLAGS = -I../intl

## Above, note -I../intl instead of -I$(top_srdir/intl) is deliberate.

libcivutility_a_SOURCES = \
  astring.cc     \
  astring.hh     \
  capability.cc  \
  capability.hh  \
  distribute.cc  \
  distribute.hh  \
  genlist.cc  \
  genlist.hh  \
  hash.cc     \
  hash.hh     \
  inputfile.cc  \
  inputfile.hh  \
  ioz.cc     \
  ioz.hh     \
  iterator.hh  \
  log.cc    \
  log.hh    \
  netintf.cc  \
  netintf.hh  \
  pqueue.cc   \
  pqueue.hh   \
  mem.cc      \
  mem.hh      \
  rand.cc     \
  rand.hh     \
  registry.cc \
  registry.hh \
  sbuffer.cc  \
  sbuffer.hh  \
  shared.cc   \
  shared.hh   \
  speclist.hh \
  specvec.hh  \
  support.cc  \
  support.hh  \
  tadns.cc    \
  tadns.hh    \
  timing.cc   \
  timing.hh   \
  md5.cc      \
  md5.hh      \
  wc_iconv.cc  \
  wc_iconv.hch \
  wc_intl.cc   \
  wc_intl.hh   \
  wildcards.cc  \
  wildcards.hh  \
  win32-ucontext.cc \
  win32-ucontext.hh
