## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
 cityicon.ico    \
 warciv.ico  \
 drop_cursor.xbm \
 drop_cursor_mask.xbm    \
 goto_cursor.xbm \
 goto_cursor_mask.xbm    \
 nuke_cursor.xbm \
 nuke_cursor_mask.xbm    \
 patrol_cursor.xbm   \
 patrol_cursor_mask.xbm  \
 source_cursor.xbm   \
 source_cursor_mask.xbm  \
 dest_cursor.xbm \
 dest_cursor_mask.xbm    \
 trade_cursor.xbm    \
 trade_cursor_mask.xbm   \
 chatline_g.hh   \
 citydlg_g.hh    \
 cityrep_g.hh    \
 colors_g.hh \
 connectdlg_g.hh \
 dialogs_g.hh    \
 diplodlg_g.hh   \
 finddlg_g.hh    \
 gotodlg_g.hh    \
 graphics_g.hh   \
 gui_main_g.hh   \
 helpdlg_g.hh    \
 inteldlg_g.hh   \
 mapctrl_g.hh    \
 mapview_g.hh    \
 menu_g.hh   \
 messagewin_g.hh \
 pages_g.hh  \
 plrdlg_g.hh \
 ratesdlg_g.hh   \
 repodlgs_g.hh   \
 spaceshipdlg_g.hh
